# asm-analyze

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  assembly_analyze.cpp  common.h  include.h  main.cpp
.github/scripts/: change.py
.github/workflows/: change.yml  cmake.yml  post-build.yml
include/: color.hpp  dbg.hpp  include.h
toTestOn/: Assembler NASM Win64.asm  README.md
